testdata/baselines/reference/submodule/conformance/privateNamesAndIndexedAccess.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNamesAndIndexedAccess.ts(7,28): error TS1005: ']' expected.
privateNamesAndIndexedAccess.ts(7,28): error TS7005: Variable '#bar' implicitly has an 'any' type.
privateNamesAndIndexedAccess.ts(7,32): error TS1005: ',' expected.
privateNamesAndIndexedAccess.ts(7,34): error TS1134: Variable declaration expected.
privateNamesAndIndexedAccess.ts(7,36): error TS1134: Variable declaration expected.
privateNamesAndIndexedAccess.ts(9,28): error TS2339: Property '#bar' does not exist on type 'C'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNamesAndIndexedAccess.ts (6 errors) ====
    class C {
        foo = 3;
        #bar = 3;
        constructor () {
            const ok: C["foo"] = 3;
            // not supported yet, could support in future:
            const badForNow: C[#bar] = 3;   // Error
                               ~~~~
!!! error TS1005: ']' expected.
                               ~~~~
!!! error TS7005: Variable '#bar' implicitly has an 'any' type.
                                   ~
!!! error TS1005: ',' expected.
                                     ~
!!! error TS1134: Variable declaration expected.
                                       ~
!!! error TS1134: Variable declaration expected.
            // will never use this syntax, already taken:
            const badAlways: C["#bar"] = 3; // Error
                               ~~~~~~
!!! error TS2339: Property '#bar' does not exist on type 'C'.
        }
    }
    